--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="css/catalog.css">
 </head>
 <body class="content" style="width: 1000px;">
 <!-- <div style="width: 250px; float: left;"> -->
@@ -41,34 +41,34 @@
         <div class="row-box">
             <div class="imagecontainer">
                 <div class="padding-image">
-                    <img src="jeans1.jpg">
+                    <img src="imgs/jeans1.jpg">
                 </div>
                 <div class="padding-image">
-                    <img src="jeans2.jpg">
-                </div>
-            </div>
-            <div class="imagecontainer">
-                <div class="padding-image">
-                    <img src="jeans3.jpg">
-                </div>
-                <div class="padding-image">
-                    <img src="jeans4.jpg">
+                    <img src="imgs/jeans2.jpg">
                 </div>
             </div>
             <div class="imagecontainer">
                 <div class="padding-image">
-                    <img src="jeans1.jpg">
+                    <img src="imgs/jeans3.jpg">
+                </div>
+                <div class="padding-image">
+                    <img src="imgs/jeans4.jpg">
+                </div>
+            </div>
+            <div class="imagecontainer">
+                <div class="padding-image">
+                    <img src="imgs/jeans1.jpg">
                 </div>
                 <div class="padding-image"> 
-                    <img src="jeans2.jpg">
+                    <img src="imgs/jeans2.jpg">
                 </div>
             </div>
             <div class="imagecontainer">
                 <div class="padding-image">
-                    <img src="jeans3.jpg">
+                    <img src="imgs/jeans3.jpg">
                 </div>
                 <div class="padding-image">
-                    <img src="jeans4.jpg">
+                    <img src="imgs/jeans4.jpg">
                 </div>
             </div>
         </div>
