image-location change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="navcontent">
         <aside>Jeans</aside>
         <div class="container" style="margin-top: 20px;">
-            <img src="jeans.jpg">
+            <img src="imgs/jeans.jpg">
             <div class="left_center" style="padding: 24px 48px;" >
                 <h1 class="content-font content-large">New Arrivals</h1>
                 <h1 class="content-font content-medium">Collection 2020</h1>
